--- a/app/src/main/res/layout/fragment_positioning.xml
+++ b/app/src/main/res/layout/fragment_positioning.xml
@@ -19,7 +19,7 @@
             android:layout_alignParentEnd="true"
             android:backgroundTint="@color/dim_red"
             android:gravity="end"
-            android:text="@string/new_expression"
+            android:text="@string/new_positioning"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             app:cornerRadius="@dimen/_25sp" />
@@ -66,40 +66,56 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/add_patient_container"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.7" />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:orientation="horizontal"
-            android:padding="@dimen/_15dp"
-            android:weightSum="2">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_submit"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:backgroundTint="@color/dim_red"
-                android:text="@string/action_submit"
-                app:cornerRadius="@dimen/_25dp" />
+                android:orientation="vertical">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_cancel"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:text="@string/action_cancel"
-                app:cornerRadius="@dimen/_25dp"
-                app:strokeColor="@color/dim_red" />
+                <androidx.fragment.app.FragmentContainerView
+                    android:id="@+id/add_patient_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.7"
+                    android:visibility="gone" />
 
-        </LinearLayout>
+                <include
+                    android:id="@+id/inc_positioning"
+                    layout="@layout/position_assessment" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_15dp"
+                    android:weightSum="2">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_submit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_5dp"
+                        android:backgroundTint="@color/dim_red"
+                        android:text="@string/action_submit"
+                        app:cornerRadius="@dimen/_25dp" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_cancel"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_5dp"
+                        android:text="@string/action_cancel"
+                        app:cornerRadius="@dimen/_25dp"
+                        app:strokeColor="@color/dim_red" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
